# ADAAD

./: .adaad_agent_state.json  .gitignore  ADAAD_7_EXECUTION_PLAN.md  ADAAD_DEEP_DIVE_AUDIT.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISTRIBUTION.md  EPIC_1_Reviewer_Reputation.md  EPIC_2_Policy_Simulation_DSL.md  EPIC_3_Aponi_IDE.md  GOVERNANCE_RISK_SIGNOFF_MEMO.md  INSTALL_ANDROID.md  LICENSE  LICENSES.md  MERGE_READY_REVIEW_COMMENT_BLOCK.md  MILESTONE_ROADMAP_ADAAD6-9.md  NOTICE  PRESS.md  PRICING.md  PR_v1.0.0_body.md  QUICKSTART.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  fix_import_boundaries.py  governance_runtime_profile.lock.json  index.html  market.py  nexus_setup.py  onboard.py  pyproject.toml  pytest.ini  requirements.server.txt  server.py
.github/: FUNDING.yml  dependabot.yml  mcp_config.json  pull_request_template.md
adaad/: __init__.py
android/: .gitignore  build.gradle  obtainium.json  settings.gradle
app/: README.md  __init__.py  architect_agent.py  beast_mode_loop.py  boot_preflight.py  cli_args.py  dream_mode.py  main.py  mutation_cycle.py  mutation_executor.py  replay_verification.py  root.py  simulation_utils.py
core/: __init__.py  random_control.py
data/: approval_index.json  weight_adaptor_state_penalty.json
docs/: ADAAD_PLAIN_ENGLISH_OVERVIEW.md  ADAAD_STRATEGIC_BUILD_SUGGESTIONS.md  ARCHITECTURE_CONTRACT.md  ARCHITECTURE_SUMMARY.md  AUDIT_REPAIR_ALIGNMENT_2026-02.md  CONSTITUTION.md  DEPENDABOT_REVIEW_POLICY.md  DETERMINISM.md  DIAGRAM_OWNERSHIP.md  DOCS_VISUAL_STYLE_GUIDE.md  ENVIRONMENT_VARIABLES.md  EVOLUTION_ARCHITECTURE.md  FOUNDATIONS.md  GOVERNANCE_ENFORCEMENT.md  GOVERNANCE_MATURITY_MODEL.md  README.md  README_IMPLEMENTATION_ALIGNMENT.md  RELEASE_EVIDENCE_MATRIX.md  SECURITY.md  THREAT_MODEL.md  first-loop-30min.md  index.html  install.html  manifest.txt
evolution/: __init__.py  evolution_analytics.py  evolution_scheduler.py  fitness.py  revenue_alignment.py  rollback.py
governance/: constitutional_rule_count.json  federation_trusted_keys.json  governance_policy_v1.json  mutation_ledger.py  policies.rego  promotion_gate.py  report_version.json  rule_applicability.yaml  simplification_targets.json
human_queue/: directory_submissions.md  discord_seeding.md  hackernews_show_hn.md  linkedin_posts.md  (+7 more)
(+814 files in other folders)
